# anpr-gate-cam

./: .gitignore  README.md
firmware/: CMakeLists.txt  main.cpp  svm.txt
firmware/archive/: main.cpp  main2.cpp
firmware/src/: feature.h  recog.h  train.h  utils.h
scripts/: deploy.sh  opencv-install.sh
server/: .env.local  knexfile.js  package.json
server/scripts/: migrate.sh
